--- a/README.org
+++ b/README.org
@@ -10,11 +10,14 @@ And it looks like I care of only 3 colored things:
    3. Keywords -- a bit of standout
 
 * More than thousand words
-  file:screenshot1.png
+  [[file:screenshot1.png]]
 
-  file:screenshot2.png
+  [[file:screenshot2.png]]
 
-  file:screenshot3.png
+  [[file:screenshot3.png]]
+
+
+  [[https://raw.githubusercontent.com/habamax/kosmos-theme/master/screenshot1.png][https://github.com/habamax/kosmos-theme/blob/master/screenshot1.png]]
 
 * TO DO
   - find color for git-commit-nonempty-second-line
